...
            android:id="@+id/tv_current_temp"
            style="@style/AppTheme.Text.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginDefault"
            android:text="@{weatherViewModel.currentVO.currentTemp}"
            app:layout_constraintBottom_toTopOf="@+id/tv_current_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="20\u00B0"/>

        <TextView
...
